--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "express-portfolio",
   "version": "0.0.0",
+  "description": "Portfolio website built with Express.js",
+  "main": "server.js",
   "private": true,
   "scripts": {
-    "start": "node ./Express_Portfolio/server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^7.1.0",
@@ -12,6 +15,7 @@
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "express-ejs-layouts": "^2.5.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1"
   }
